# atlsd

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  note.txt  test.ps1
.github/workflows/: docker-publish.yml
apps/portal/: .env.example  index.html  package-lock.json  package.json  vite.config.js
apps/portal/src/: api.js  main.jsx
bot/: Cargo.toml
bot/migrations/: 001_init.sql
bot/src/: config.rs  main.rs
bot/src/commands/: forex.rs  market.rs  mod.rs  stock.rs  sys.rs
bot/src/handlers/: events.rs
bot/src/repository/: calendar.rs  connection.rs  forex.rs  moderation.rs  price_alert.rs  stock.rs  twitter.rs  volatility.rs
bot/src/services/: core_ws.rs  market_ws.rs  mod.rs  price_alert.rs
bot/src/utils/: embed.rs
control-plane/: Cargo.toml
control-plane/src/: config.rs  crypto.rs  main.rs
control-plane/src/api/: admin.rs  auth.rs  keys.rs  mod.rs  plans.rs  server.rs  tenant_config.rs  usage.rs
control-plane/src/billing/: stub.rs
control-plane/src/models/: api_key.rs  mod.rs  oauth_account.rs  tenant_config.rs  usage.rs  user.rs
control-plane/src/sync/: mod.rs
core/: .dockerignore  .gitignore  Cargo.toml
core/migrations/: 001_initial.sql  003_auth_sessions.sql
core/src/: config.rs  error.rs  ingestion_subscriber.rs  main.rs
core/src/api/: middleware.rs  mod.rs  server.rs  state.rs  usage_tracker.rs
core/src/api/handlers/: calendar.rs  health.rs  market.rs  mod.rs  news.rs  scraping.rs  stock.rs
core/src/collector/: calendar.rs  forex.rs  mod.rs  price.rs  rss.rs  stock.rs  traits.rs  twitter.rs
core/src/db/: pool.rs
core/src/html/: clean.rs  mod.rs
core/src/pipeline/: calendar.rs  forex.rs  mod.rs  news.rs  scheduler.rs  stock.rs  traits.rs  twitter.rs
core/src/scraper/: article.rs  mod.rs  traits.rs
core/src/stats/: collector.rs  hub.rs  mod.rs
core/src/tenant/: context.rs  registry.rs
core/src/ws/: client.rs  events.rs  hub.rs
crates/atlsd-auth/: Cargo.toml
crates/atlsd-auth/src/: api_key.rs  crypto.rs  extract.rs  jwt.rs  lib.rs
crates/atlsd-common/: Cargo.toml
crates/atlsd-common/src/: circuit_breaker.rs  config.rs  db.rs  dlq.rs  lib.rs  util.rs
crates/atlsd-contracts/: Cargo.toml
crates/atlsd-contracts/src/: event_envelope.rs  geosignal.rs  intelligence.rs  lib.rs  market.rs  news.rs  platform.rs  topics.rs
crates/atlsd-domain/: Cargo.toml
crates/atlsd-domain/src/: lib.rs  plan.rs  tenant.rs  usage.rs
crates/atlsd-eventbus/: Cargo.toml
crates/atlsd-eventbus/src/: config.rs  lib.rs  nats.rs  publisher.rs  redis.rs  subjects.rs
crates/atlsd-observability/: Cargo.toml
crates/atlsd-observability/src/: lib.rs
db/migrations/bot/: 001_initial_schema.sql
db/migrations/clickhouse/: 001_market_history.sql
db/migrations/core/: 001_initial.sql  002_saas_platform.sql  002_url_analysis_cache.sql  003_market_latest_prices.sql  004_forex_feed_sources_management.sql  004_ohlcv_candles.sql  005_ensure_news_tables.sql  005_schema_foundation.sql  006_economic_calendar_events.sql  006_rename_news_to_forex_news.sql  006_why_move_explanations.sql  007_macro_series_fred.sql  007_market_calendar.sql  008_api_key_ws_limits.sql  008_macro_signals.sql  009_market_news_source_labels.sql  010_clean_market_news_headline_sources.sql  011_geosignals.sql  012_free_institutional_data_pack.sql  013_options_data_pack.sql  014_institutional_market_data.sql
docs/architecture/: events.md  ingestion.md  overview.md  realtime.md  target-institutional-platform.md  tenancy.md
docs/audit/: PROJECT_AUDIT_REPORT.md
docs/product/: plans.md  roadmap.md
docs/superpowers/plans/: 2026-07-22-public-web-options-dashboard.md
infra/compose/: local.yml  monitoring.yml  prod.build.yml  prod.yml
infra/docker/: Dockerfile.analyzer  Dockerfile.api-gateway  Dockerfile.bot  Dockerfile.control-plane  Dockerfile.core  Dockerfile.ingestion  Dockerfile.intelligence-service  Dockerfile.market-data  Dockerfile.news-service  Dockerfile.portal  Dockerfile.public-web  Dockerfile.realtime-gateway
infra/env/: monitoring.env.example
infra/monitoring/: README.md
infrastructure/: Dockerfile.bot  Dockerfile.control-plane  Dockerfile.core  Dockerfile.ingestion  Dockerfile.portal  compose.yml
ingestion-gateway/: Cargo.toml
ingestion-gateway/src/: config.rs  main.rs  market_hours.rs
ingestion-gateway/src/workers/: binance.rs  finnhub.rs  mod.rs  tiingo.rs  yahoo.rs
portal/: .dockerignore
portal/src/: api.js  index.css  main.jsx
scripts/: backfill-clickhouse-market.sh  create-admin.sh
scripts/k6/: README.md  http-health.js  realtime-ws.js
services/analyzer/: README.md  analyzer.py  event_extractor.py  language.py  main.py  options_worker.py  requirements.txt  rule_engine.py  schemas.py  scraping.py  translator.py  why_engine.py
services/api-gateway/: Cargo.toml
services/api-gateway/src/: auth.rs  config.rs  http.rs  main.rs  proxy.rs  state.rs  tenant.rs  usage.rs
services/control-plane/: Cargo.toml
services/core/: Cargo.toml
services/ingestion-gateway/: Cargo.toml
services/intelligence-service/: Cargo.toml
services/intelligence-service/src/: clickhouse.rs  config.rs  http.rs  main.rs  sentiment.rs  state.rs  why_move.rs
services/market-data/: Cargo.toml
services/market-data/src/: alert_notifier.rs  alerts.rs  batcher.rs  calendar.rs  clickhouse.rs  config.rs  cot.rs  data_quality.rs  economic.rs  energy.rs  fear_greed.rs  history.rs  http.rs  ingestion.rs  institutional.rs  main.rs  options.rs  prices.rs  rates.rs  session.rs  spikes.rs  state.rs
services/news-service/: Cargo.toml
services/news-service/src/: central_bank.rs  config.rs  gdelt.rs  geosignals.rs  http.rs  main.rs  news.rs  pipeline.rs  realtime.rs  sec.rs
services/news-service/src/pipeline/: analysis.rs  finnhub.rs  fred.rs  macro.rs  persistence.rs  rss.rs  scheduler.rs  sources.rs  text.rs
services/realtime-gateway/: Cargo.toml
services/realtime-gateway/src/: client.rs  config.rs  http.rs  hub.rs  main.rs  metrics.rs  nats_subscriber.rs  redis_subscriber.rs  state.rs  streams.rs  tenant.rs
web/: package.json
(+139 files in other folders)
