[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"
description = "SaaS Control Plane for World Info platform"

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
