[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Production-ready world information aggregation platform"
license = "MIT"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
tradingview-rs = { git = "https://github.com/bitbytelabio/tradingview-rs.git", branch = "main" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2"
scraper = "0.22"
ammonia = "4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
md-5 = "0.10"
regex = "1"
chrono = { workspace = true }
chrono-tz = "0.10"
uuid = { workspace = true }
sysinfo = "0.33"
thiserror = { workspace = true }
anyhow = { workspace = true }
quick-xml = { version = "0.37", features = ["serialize"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"
html-escape = "0.2"
url = { workspace = true }
redis = { workspace = true }
hex = { workspace = true }
