[package]
name = "atlsd-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
rand = "0.8"
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
