[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
description = "ATLSD public REST API gateway"
license = "MIT"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
atlsd-auth = { path = "../../crates/atlsd-auth" }
atlsd-common = { path = "../../crates/atlsd-common" }
atlsd-domain = { path = "../../crates/atlsd-domain" }
atlsd-eventbus = { path = "../../crates/atlsd-eventbus" }
atlsd-observability = { path = "../../crates/atlsd-observability" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
