[package]
name = "intelligence-service"
version = "0.1.0"
edition = "2021"
description = "ATLSD intelligence domain service"
license = "MIT"

[[bin]]
name = "intelligence-service"
path = "src/main.rs"

[dependencies]
atlsd-common = { path = "../../crates/atlsd-common" }
atlsd-observability = { path = "../../crates/atlsd-observability" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
