[package]
name = "market-data"
version = "0.1.0"
edition = "2021"
description = "ATLSD market data domain service"
license = "MIT"

[[bin]]
name = "market-data"
path = "src/main.rs"

[dependencies]
atlsd-common = { path = "../../crates/atlsd-common" }
atlsd-contracts = { path = "../../crates/atlsd-contracts" }
atlsd-eventbus = { path = "../../crates/atlsd-eventbus" }
atlsd-observability = { path = "../../crates/atlsd-observability" }
async-nats = "0.42"
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
