[package]
name = "news-service"
version = "0.1.0"
edition = "2021"
description = "ATLSD news domain service"
license = "MIT"

[[bin]]
name = "news-service"
path = "src/main.rs"

[dependencies]
atlsd-common = { path = "../../crates/atlsd-common" }
atlsd-eventbus = { path = "../../crates/atlsd-eventbus" }
atlsd-observability = { path = "../../crates/atlsd-observability" }
async-nats = "0.42"
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
