[package]
name = "realtime-gateway"
version = "0.1.0"
edition = "2021"
description = "ATLSD realtime WebSocket gateway"
license = "MIT"

[[bin]]
name = "realtime-gateway"
path = "src/main.rs"

[dependencies]
atlsd-auth = { path = "../../crates/atlsd-auth" }
atlsd-common = { path = "../../crates/atlsd-common" }
atlsd-domain = { path = "../../crates/atlsd-domain" }
atlsd-eventbus = { path = "../../crates/atlsd-eventbus" }
atlsd-observability = { path = "../../crates/atlsd-observability" }
async-nats = "0.42"
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }

